// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ThemeChoicePanel /> custom theme should display custom theme 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsSubsection mx_SettingsSubsection_newUi"
    data-testid="themePanel"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Theme
      </h2>
    </div>
    <div
      class="mx_SettingsSubsection_content mx_SettingsSubsection_content_newUi"
    >
      <form
        class="_root_1o4d9_17"
      >
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_udcm8_10"
            >
              <input
                class="_input_udcm8_24"
                id="radix-react-use-id-1"
                name="systemTheme"
                role="switch"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_udcm8_34"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-1"
            >
              Match system theme
            </label>
          </div>
        </div>
      </form>
      <form
        class="_root_1o4d9_17 mx_ThemeChoicePanel_ThemeSelectors"
      >
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector mx_ThemeChoicePanel_themeSelector_enabled cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                checked=""
                class="_input_1ug7n_18"
                id="radix-react-use-id-2"
                name="themeSelector"
                title=""
                type="radio"
                value="light"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-2"
            >
              Light
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-3"
                name="themeSelector"
                title=""
                type="radio"
                value="dark"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-3"
            >
              Dark
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-4"
                name="themeSelector"
                title=""
                type="radio"
                value="light-high-contrast"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-4"
            >
              High contrast
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-5"
                name="themeSelector"
                title=""
                type="radio"
                value="custom-Alice theme"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-5"
            >
              Alice theme
            </label>
          </div>
        </div>
      </form>
      <div
        class="mx_ThemeChoicePanel_CustomTheme"
      >
        <form
          class="_root_1o4d9_17 mx_ThemeChoicePanel_CustomTheme_EditInPlace"
        >
          <div
            class="_field_1o4d9_27"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-6"
            >
              Add custom theme
            </label>
            <div
              class="_controls_17lij_8"
            >
              <input
                aria-describedby="radix-react-use-id-7"
                class="_control_d83jn_10"
                id="radix-react-use-id-6"
                name="input"
                title=""
                value=""
              />
            </div>
            <span
              class="_message_1o4d9_86 _help-message_1o4d9_92"
              id="radix-react-use-id-7"
            >
              Enter the URL of a custom theme you want to apply.
            </span>
          </div>
        </form>
        <ul
          class="mx_ThemeChoicePanel_CustomThemeList"
        >
          <li
            aria-label="Alice theme"
            class="mx_ThemeChoicePanel_CustomThemeList_theme"
          >
            <span
              class="mx_ThemeChoicePanel_CustomThemeList_name"
            >
              Alice theme
            </span>
            <button
              aria-label="Delete"
              aria-labelledby="react-use-id-8"
              class="_icon-button_1215g_8 _destructive_1215g_95"
              data-kind="primary"
              role="button"
              style="--cpd-icon-button-size: 32px;"
              tabindex="0"
            >
              <div
                class="_indicator-icon_147l5_17"
                style="--cpd-icon-button-size: 100%;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 21q-.824 0-1.412-.587A1.93 1.93 0 0 1 5 19V6a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 5q0-.424.287-.713A.97.97 0 0 1 5 4h4q0-.424.287-.712A.97.97 0 0 1 10 3h4q.424 0 .713.288Q15 3.575 15 4h4q.424 0 .712.287Q20 4.576 20 5t-.288.713A.97.97 0 0 1 19 6v13q0 .824-.587 1.413A1.93 1.93 0 0 1 17 21zM7 6v13h10V6zm2 10q0 .424.287.712Q9.576 17 10 17t.713-.288A.97.97 0 0 0 11 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 10 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 9 9zm4 0q0 .424.287.712.288.288.713.288.424 0 .713-.288A.97.97 0 0 0 15 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 14 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 13 9z"
                  />
                </svg>
              </div>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="_separator_13qwf_8"
      data-kind="primary"
      data-orientation="horizontal"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`<ThemeChoicePanel /> custom theme should render the custom theme section 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsSubsection mx_SettingsSubsection_newUi"
    data-testid="themePanel"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Theme
      </h2>
    </div>
    <div
      class="mx_SettingsSubsection_content mx_SettingsSubsection_content_newUi"
    >
      <form
        class="_root_1o4d9_17"
      >
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_udcm8_10"
            >
              <input
                class="_input_udcm8_24"
                id="radix-react-use-id-1"
                name="systemTheme"
                role="switch"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_udcm8_34"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-1"
            >
              Match system theme
            </label>
          </div>
        </div>
      </form>
      <form
        class="_root_1o4d9_17 mx_ThemeChoicePanel_ThemeSelectors"
      >
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector mx_ThemeChoicePanel_themeSelector_enabled cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                checked=""
                class="_input_1ug7n_18"
                id="radix-react-use-id-2"
                name="themeSelector"
                title=""
                type="radio"
                value="light"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-2"
            >
              Light
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-3"
                name="themeSelector"
                title=""
                type="radio"
                value="dark"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-3"
            >
              Dark
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-4"
                name="themeSelector"
                title=""
                type="radio"
                value="light-high-contrast"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-4"
            >
              High contrast
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-5"
                name="themeSelector"
                title=""
                type="radio"
                value="custom-Alice theme"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-5"
            >
              Alice theme
            </label>
          </div>
        </div>
      </form>
      <div
        class="mx_ThemeChoicePanel_CustomTheme"
      >
        <form
          class="_root_1o4d9_17 mx_ThemeChoicePanel_CustomTheme_EditInPlace"
        >
          <div
            class="_field_1o4d9_27"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-6"
            >
              Add custom theme
            </label>
            <div
              class="_controls_17lij_8"
            >
              <input
                aria-describedby="radix-react-use-id-7"
                class="_control_d83jn_10"
                id="radix-react-use-id-6"
                name="input"
                title=""
                value=""
              />
            </div>
            <span
              class="_message_1o4d9_86 _help-message_1o4d9_92"
              id="radix-react-use-id-7"
            >
              Enter the URL of a custom theme you want to apply.
            </span>
          </div>
        </form>
        <ul
          class="mx_ThemeChoicePanel_CustomThemeList"
        >
          <li
            aria-label="Alice theme"
            class="mx_ThemeChoicePanel_CustomThemeList_theme"
          >
            <span
              class="mx_ThemeChoicePanel_CustomThemeList_name"
            >
              Alice theme
            </span>
            <button
              aria-label="Delete"
              aria-labelledby="react-use-id-8"
              class="_icon-button_1215g_8 _destructive_1215g_95"
              data-kind="primary"
              role="button"
              style="--cpd-icon-button-size: 32px;"
              tabindex="0"
            >
              <div
                class="_indicator-icon_147l5_17"
                style="--cpd-icon-button-size: 100%;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 21q-.824 0-1.412-.587A1.93 1.93 0 0 1 5 19V6a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 5q0-.424.287-.713A.97.97 0 0 1 5 4h4q0-.424.287-.712A.97.97 0 0 1 10 3h4q.424 0 .713.288Q15 3.575 15 4h4q.424 0 .712.287Q20 4.576 20 5t-.288.713A.97.97 0 0 1 19 6v13q0 .824-.587 1.413A1.93 1.93 0 0 1 17 21zM7 6v13h10V6zm2 10q0 .424.287.712Q9.576 17 10 17t.713-.288A.97.97 0 0 0 11 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 10 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 9 9zm4 0q0 .424.287.712.288.288.713.288.424 0 .713-.288A.97.97 0 0 0 15 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 14 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 13 9z"
                  />
                </svg>
              </div>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="_separator_13qwf_8"
      data-kind="primary"
      data-orientation="horizontal"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`<ThemeChoicePanel /> renders the theme choice UI 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsSubsection mx_SettingsSubsection_newUi"
    data-testid="themePanel"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Theme
      </h2>
    </div>
    <div
      class="mx_SettingsSubsection_content mx_SettingsSubsection_content_newUi"
    >
      <form
        class="_root_1o4d9_17"
      >
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_udcm8_10"
            >
              <input
                class="_input_udcm8_24"
                id="radix-react-use-id-1"
                name="systemTheme"
                role="switch"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_udcm8_34"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-1"
            >
              Match system theme
            </label>
          </div>
        </div>
      </form>
      <form
        class="_root_1o4d9_17 mx_ThemeChoicePanel_ThemeSelectors"
      >
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector mx_ThemeChoicePanel_themeSelector_enabled cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                checked=""
                class="_input_1ug7n_18"
                id="radix-react-use-id-2"
                name="themeSelector"
                title=""
                type="radio"
                value="light"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-2"
            >
              Light
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-3"
                name="themeSelector"
                title=""
                type="radio"
                value="dark"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-3"
            >
              Dark
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-4"
                name="themeSelector"
                title=""
                type="radio"
                value="light-high-contrast"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-4"
            >
              High contrast
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="_separator_13qwf_8"
      data-kind="primary"
      data-orientation="horizontal"
      role="separator"
    />
  </div>
</DocumentFragment>
`;
